# public

./: .gitignore  testpc
AppleSamples/Forward-Plus-with-Tile-Shading/: README.md
BookNotes/: AnIntroductionToProjectiveGeometry-Filon.md  Languages  Projective Geometry.md  TheRealProjectivePlane_3rd_Coxeter.md  history  multiple-view-geometry.md  music  music.md  scale_GeoffreyWest
HTML/: JSTestMain.js  index.html  scrollTop.html  scrollTop.js
HTML_JS/: JSTestMain.html
HTML_JS/requestPointerLock/: pointerlock-test.html
HelloOpenGLES20/: import-summary.txt
HelloOpenGLES20/app/: build.gradle
JSONSerialization/: README.md
JSONSerialization/JSONSerialization/: AppDelegate.swift  ViewController.swift
JSONSerialization/JSONSerialization.xcodeproj/: project.pbxproj
JSTest/: default.html
MTKViewTest/MTKViewTest/: AppDelegate.swift  README.md  SceneDelegate.swift
MTKViewTest/MTKViewTest.xcodeproj/: project.pbxproj
MacMTKViewSample/MacMTKViewSample/: AppDelegate.swift  ViewController.swift
MacMTKViewSample/MacMTKViewSample.xcodeproj/: project.pbxproj
MetalBilinearFiltering/: README.md  ~$estions.docx
SwiftSMS/: README.md
VulkanHelloTri/: HelloTri.cpp  HelloTri.h  ReadMe.txt  Resource.h  VulkanHelloTri.cpp  VulkanHelloTri.h  VulkanHelloTri.rc  VulkanHelloTri.sln  VulkanHelloTri.vcxproj  VulkanHelloTri.vcxproj.filters  stdafx.cpp  stdafx.h
VulkanHelloTriAndroid/app/src/main/cpp/: CMakeLists.txt  main.cpp
VulkanSetupOnMacOS/: ReadME.md
VulkanTutorialLinux/: 30_multisampling.cpp  CMakeLists.txt  README.md  g.sh  launch.json  vulkan.sh
VulkanTutorialLinux/shaders/: frag.spv  vert.spv
docs/: 1245_remodeling.md  Metal GPU Capture.md  README.md  remod.md
hadronSB/: package.json
react/: .gitignore  Index.html  README.txt  package.json
react/css/: app.css
(+142 files in other folders)
